# Secure_IoT_Sensor_Node

./: BUILD.md  BUILD_SYSTEMS.md  CMAKE_VS_MAKEFILE.md  CMakeLists.txt  Makefile  README.md  README_production.md  build.bat  build.sh  github_description.txt  github_description_255.txt  github_description_minimal.txt  github_topics.txt  ota_upload.py  publish_instructions.md
app/: app.ld  comm_task.c  comm_task.h  led_manager.c  led_manager.h  main.c  main.h  performance_monitor.c  performance_monitor.h  sensor_task.c  sensor_task.h  storage_task.c  storage_task.h  update_task.c  update_task.h  web_interface.c  web_interface.h
bootloader/: bootloader.c  bootloader.h  bootloader.ld  flash_if.c  signature.c  startup_stm32f4xx.c
build-firmware/: CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja
cmake/: arm-none-eabi.cmake
config/: memory_map.h  system_config.h
demo/: README.md  api_server.py  device_bridge.py  real_device_bridge.py  requirements.txt
demo/web_visualization/: README.md  api_demo.js  app.js  index.html  package.json  server.py
docs/: README.md  index.html  mermaid-height-util.js
drivers/: flash_if.c  flash_if.h  gpio.c  gpio.h  i2c.c  i2c.h  spi.c  spi.h  uart.c  uart.h
middleware/: stm32f4xx_hal.c  stm32f4xx_hal.h
middleware/crypto/: ota_metadata.c  ota_metadata.h
tests/: CMakeLists.txt  README.md  test_framework.c  test_framework.h  test_runner.c  test_stubs.c  test_stubs.h
tests/integration/: test_system.c  test_system.h
tests/mocks/: freertos_mock.c  freertos_mock.h  hal_mock.c  hal_mock.h
tests/unit/: test_flash.c  test_flash.h  test_ota.c  test_ota.h  test_uart.c  test_uart.h
